fixed UpdateChecker crashes when no connection to manifest